--- a/style/less/main.less
+++ b/style/less/main.less
@@ -21,11 +21,11 @@ header {
 		font-weight: 300;
 		letter-spacing: 2px
 	}
-}
-
-.signup {
-	span {
-		background: @grayLight;
+	form .signup {
+		position: relative;
+		top: 500px;
+		z-index: 1;
+		input { height: 30px; }
 	}
 }
 
