--- a/style/css/main.css
+++ b/style/css/main.css
@@ -3509,22 +3509,59 @@ header {
   font-weight: 300;
   letter-spacing: 2px;
 }
-#blurb form .signup {
+#blurb form.signup {
   position: relative;
-  top: 500px;
+  top: 400px;
   z-index: 1;
 }
-#blurb form .signup input {
+#blurb form.signup input {
   height: 30px;
+}
+#blurb div.input-append {
+  -moz-box-shadow: 0 0 20px 14px white;
+  -webkit-box-shadow: 0 0 20px 14px white;
+  box-shadow: 0 0 20px 14px white;
+}
+#blurb div.input-append input {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
+}
+#blurb div.input-append input:focus {
+  border-color: #ffffff;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0,0,0,.6);
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0,0,0,.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0,0,0,.6);
+}
+#blurb div.input-append button {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
+  height: 40px;
+}
+#blurb img#lightbulb {
+  margin-top: -60px;
 }
 article {
   height: 600px;
   display: block;
 }
-.navbar .nav > li > a {
-  padding-left: 30px;
-  padding-right: 30px;
+.navbar {
+  text-align: center;
+  font-size: 16px;
 }
-.brand {
+.navbar .nav > li {
+  float: left;
+  margin-left: 20px;
+  width: 140px;
+}
+.navbar .nav > li,
+.navbar .nav > .brand {
+  line-height: 30px;
+}
+.navbar a.brand {
   font-weight: 700;
+  float: left;
+  margin-left: 20px;
+  width: 300px;
 }
