--- a/style/less/main.less
+++ b/style/less/main.less
@@ -21,11 +21,36 @@ header {
 		font-weight: 300;
 		letter-spacing: 2px
 	}
-	form .signup {
+	form.signup {
 		position: relative;
-		top: 500px;
+		top: 400px;
 		z-index: 1;
-		input { height: 30px; }
+		input {
+			height: 30px;
+		}
+	}
+	div.input-append {
+		-moz-box-shadow: 0 0 20px 14px white;
+		-webkit-box-shadow: 0 0 20px 14px white;
+		box-shadow: 0 0 20px 14px white;
+		input {
+			-webkit-border-radius: 0px;
+			-moz-border-radius: 0px;
+			border-radius: 0px;
+			&:focus {
+				border-color: @white;
+				.box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0,0,0,.6)");
+			}
+		}
+		button {
+			-webkit-border-radius: 0px;
+			-moz-border-radius: 0px;
+			border-radius: 0px;
+			height: 40px;
+		}
+	}
+	img#lightbulb {
+		margin-top:-60px;
 	}
 }
 
@@ -36,12 +61,17 @@ article {
 
 // Modifications to bootstrap classes
 // -------------------------
-.navbar .nav > li > a {
-	@navHorizontalPadding: 30px;
-	padding-left: @navHorizontalPadding;
-	padding-right: @navHorizontalPadding;
+.navbar {
+	text-align: center;
+	font-size: 16px;
 }
-
-.brand {
+.navbar .nav > li {
+	.makeColumn(2);
+}
+.navbar .nav > li, .navbar .nav > .brand {
+	line-height: 30px;
+}
+.navbar a.brand {
 	font-weight: 700;
+	.makeColumn(4);
 }
