added content, style tweaks,  calendar plugin, mailchimp codes and google analytics

--- a/style/less/variables.less
+++ b/style/less/variables.less
@@ -39,7 +39,7 @@
 // Links
 // -------------------------
 @linkColor:             @blue;
-@linkColorHover:        darken(@linkColor, 15%);
+@linkColorHover:        lighten(@linkColor, 15%);
 
 
 // Typography
@@ -180,7 +180,7 @@
 @navbarCollapseWidth:             979px;
 @navbarCollapseDesktopWidth:      @navbarCollapseWidth + 1;
 
-@navbarHeight:                    40px;
+@navbarHeight:                    50px;
 @navbarBackgroundHighlight:       @white;
 @navbarBackground:                @white;
 @navbarBorder:                    darken(@navbarBackground, 12%);
