--- a/style/less/main.less
+++ b/style/less/main.less
@@ -3,8 +3,8 @@
 
 // Splash page elements
 // -------------------------
-header {
-	padding-top:40px;
+header#blurb {
+	padding-top:60px;
 }
 
 .bold {
@@ -12,27 +12,24 @@ header {
 }
 
 #blurb {
-	padding-top:20px;
 	text-align: center;
 	p {
 		font-family: "Roboto", sans-serif;
 		font-size:25px;
 		line-height: 30px;
 		font-weight: 300;
-		letter-spacing: 2px
+		letter-spacing: 2px;
+		margin: 20px 0 20px;
 	}
 	form.signup {
 		position: relative;
 		top: 400px;
 		z-index: 1;
-		input {
-			height: 30px;
-		}
 	}
 	div.input-append {
-		-moz-box-shadow: 0 0 20px 14px white;
-		-webkit-box-shadow: 0 0 20px 14px white;
-		box-shadow: 0 0 20px 14px white;
+	-moz-box-shadow: 0 0 20px 14px white;
+	-webkit-box-shadow: 0 0 20px 14px white;
+	box-shadow: 0 0 20px 14px white;
 		input {
 			-webkit-border-radius: 0px;
 			-moz-border-radius: 0px;
@@ -49,15 +46,52 @@ header {
 			height: 40px;
 		}
 	}
-	img#lightbulb {
-		margin-top:-60px;
+}
+
+div.input-append {
+	input {
+		height: 30px;
+		&:focus {
+			border-color: 1px 0 1px 1px @blueDark;
+			.box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0,0,0,.6)");
+		}
+	}
+	button {
+		height: 40px;
 	}
 }
 
-article {
-	height:600px;
-	display:block;
+img#lightbulb {
+	margin-top:-60px;
 }
+
+#calendar {
+	padding-top:130px;
+}
+
+section {
+	margin-top:40px;
+}
+
+footer {
+	background-color: @blue;
+	border-top: 1px solid @blueDark;
+	color: @white;
+	margin-top:60px;
+	padding: 20px 0 40px;
+	form {
+		.center-block()
+	}
+	#attributions {
+		padding: 20px 0;
+	}
+	a {
+		color: @white;
+		text-decoration: underline;
+		&:hover { color: lighten(@orange, 15%);}
+	}
+}
+
 
 // Modifications to bootstrap classes
 // -------------------------
@@ -68,10 +102,20 @@ article {
 .navbar .nav > li {
 	.makeColumn(2);
 }
-.navbar .nav > li, .navbar .nav > .brand {
-	line-height: 30px;
-}
-.navbar a.brand {
+.navbar .brand {
+	color: @white;
+	text-shadow: 0px 0px 2px @blue;
 	font-weight: 700;
+	font-size: 30px;
 	.makeColumn(4);
+	.navbarVerticalAlign(50px);
+	.transition(.2s);
+	&:hover { color: @blueDark; }
+}
+h1 {
+	font-weight: 300;
+}
+h4 {
+	font-weight: 700;
+	padding: 10px 0 0;
 }
