modified hover color on brand link

--- a/style/less/main.less
+++ b/style/less/main.less
@@ -110,7 +110,7 @@ footer {
 	.makeColumn(4);
 	.navbarVerticalAlign(50px);
 	.transition(.2s);
-	&:hover { color: @blueDark; }
+	&:hover { color: @blue; }
 }
 h1 {
 	font-weight: 300;
