--- a/style/css/main.css
+++ b/style/css/main.css
@@ -623,6 +623,6 @@ footer #attributions{padding:20px 0;}
 footer a{color:#ffffff;text-decoration:underline;}footer a:hover{color:#fbb450;}
 .navbar{text-align:center;font-size:16px;}
 .navbar .nav>li{float:left;margin-left:20px;width:140px;}
-.navbar .brand{color:#ffffff;text-shadow:0px 0px 2px #049cdb;font-weight:700;font-size:30px;float:left;margin-left:20px;width:300px;margin-top:0px;-webkit-transition:0.2s;-moz-transition:0.2s;-o-transition:0.2s;transition:0.2s;}.navbar .brand:hover{color:#0064cd;}
+.navbar .brand{color:#ffffff;text-shadow:0px 0px 2px #049cdb;font-weight:700;font-size:30px;float:left;margin-left:20px;width:300px;margin-top:0px;-webkit-transition:0.2s;-moz-transition:0.2s;-o-transition:0.2s;transition:0.2s;}.navbar .brand:hover{color:#049cdb;}
 h1{font-weight:300;}
 h4{font-weight:700;padding:10px 0 0;}
